--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Will Russell"
-email: fellowship@mlh.io
+title: "David Guo"
+email: dguo13@binghamton.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" 
-url: "/portfolio-template" 
+url: "https://stop176.github.io/" 
 twitter_username: mlhacks
-github_username:  mlh-fellowship
+github_username:  stop176
 
 sass:
   sass_dir: _sass
